--- a/index.html
+++ b/index.html
@@ -6,103 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <!-- exercise 1 -->
-    <!-- <ul id="categories">
-        <li class="item">
-            <h2>Animals</h2>
-            <ul>
-                <li>Cat</li>
-                <li>Hamster</li>
-                <li>Horse</li>
-                <li>Parrot</li>
-            </ul>
-        </li>
-        <li class="item">
-            <h2>Products</h2>
-            <ul>
-                <li>Bread</li>
-                <li>Prasley</li>
-                <li>Cheese</li>
-            </ul>
-        </li>
-        <li class="item">
-            <h2>Technologies</h2>
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>React</li>
-                <li>Node.js</li>
-            </ul>
-        </li>
-    </ul> -->
-
-
-    <!-- exercise 2 -->
-    <!-- <ul id="ingredients"></ul> -->
-
-
-    <!-- exercise 3 -->
-    <!-- <ul class="gallery"></ul> -->
-
-
-    <!-- exercise 4 -->
-    <!-- <div id="counter">
-        <button type="button" data-action="decrement">-1</button>
-        <span id="value">0</span>
-        <button type="button" data-action="increment">+1</button>
-    </div> -->
-
-
-    <!-- exercise 5 -->
-    <!-- <input type="text" id="name-input" placeholder="Please enter your name" />
-    <h1>Hello, <span id="name-output">Anonymous</span>!</h1> -->
-
-
-    <!-- exercise 6 -->
-    <!-- <input type="text" id="validation-input" data-length="6" placeholder="Please enter 6 symbols" /> -->
-
-
-    <!-- exercise 7 -->
-    <!-- <input id="font-size-control" type="range" min="16" max="96" />
-    <br />
-    <span id="text">Abracadabra!</span> -->
-
-
-    <!-- exercise 8 -->
-    <!-- <form class="login-form">
-        <label>
-            Email
-            <input type="email" name="email" />
-        </label>
-        <label>
-            Password
-            <input type="password" name="password" />
-        </label>
-        <button type="submit">Login</button>
-    </form> -->
-
-
-    <!-- exercise 9 -->
-    <!-- <div class="widget">
-        <p>Background color: <span class="color">-</span></p>
-        <button type="button" class="change-color">Change color</button>
-    </div> -->
-
-
-    <!-- exercise 10 -->
-    <!-- <div id="controls">
-        <input type="number" min="1" max="100" step="1" />
-        <button type="button" data-create>Create</button>
-        <button type="button" data-destroy>Destroy</button>
-    </div>
-
-    <div id="boxes"></div> -->
-    <script defer src="./script.js"></script>
+    <ul>
+        <li><a href="./task-01.html">Task 1</a></li>
+        <li><a href="./task-02.html">Task 2</a></li>
+        <li><a href="./task-03.html">Task 3</a></li>
+        <li><a href="./task-04.html">Task 4</a></li>
+        <li><a href="./task-05.html">Task 5</a></li>
+        <li><a href="./task-06.html">Task 6</a></li>
+        <li><a href="./task-07.html">Task 7</a></li>
+        <li><a href="./task-08.html">Task 8</a></li>
+        <li><a href="./task-09.html">Task 9</a></li>
+        <li><a href="./task-10.html">Task 10 (optional)</a></li>
+    </ul>
 </body>
 
 </html>
